backend/customer/src/main/k8s/biopro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: api
spec:
  selector:
    app: customer
  ports:
    - name: http
      port: 8080
